EXCEPT CANCELLATION AND AMOOUNT WITHDRAW FACILITIES